--- a/client/app/pages/movieCrowler/movieCrowler.temp.html
+++ b/client/app/pages/movieCrowler/movieCrowler.temp.html
@@ -2,6 +2,9 @@
   <div>
     <button class="btn" ng-click="mcCtrl.startCrowler()">启动爬虫</button>
   </div>
+  <!-- just test window.origin -->
+  <p>{{ mcCtrl.currentLocation }}</p>
+  <p>{{ mcCtrl.origin }}</p>
   <table>
     <thead>
       <tr>
