--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- inject:css -->
-  <link rel="stylesheet" href="static/css/c1526590987680.min.css">
+  <link rel="stylesheet" href="static/css/c1527456929805.min.css">
   <!-- endinject -->
   <!--build:css  bower_components/components-font-awesome/css/fontawesome-all.min.css-->
   <!--/build-->
@@ -16,12 +16,14 @@
   <!--/build-->
   <!--build:js bower_components/angular-animate/angular-animate.min.js-->
   <!--/build-->
+   <!--build:js /socket.io/socket.io.js-->
+  <!--/build--> 
   <!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> -->
 </head>
 <body>
   <div ui-view></div>
   <!-- inject:js -->
-  <script src="static/js/j1526590987680.min.js"></script>
+  <script src="static/js/j1527456929805.min.js"></script>
   <!-- endinject -->
   <style>
     * {
