--- a/client/app/pages/chatRoom/chatRoom.temp.html
+++ b/client/app/pages/chatRoom/chatRoom.temp.html
@@ -1,3 +1,21 @@
 <div class="chatRoom">
-  <h3>this is chat room home</h3>
+  <h3>welcome to the chat room, <strong>{{ciCtrl.user.nickName}}</strong></h3>
+  <div ng-if="ciCtrl.joinedRoom==false">
+    <p>available rooms:</p>
+    <ul>
+      <li ng-repeat="room in ciCtrl.rooms" ng-click="joinRoom(room)">
+        {{ room }}
+      </li>
+    </ul>
+    <br>
+    <input type="button" value="create new room" ng-click="createNewRoom()">
+  </div> <!-- home page -->
+  <div ng-if="ciCtrl.joinedRoom">
+    <p>joined room: {{ ciCtrl.currentRoom }}</p>
+    <div>
+      <ul>
+        <li ng-repeat="user in connectedUsers">{{ user }}</li>
+      </ul>
+    </div> <!-- users in the room -->
+  </div><!-- in a room -->
 </div>
