--- a/client/app/pages/chatRoom/chatRoom.temp.html
+++ b/client/app/pages/chatRoom/chatRoom.temp.html
@@ -18,4 +18,6 @@
       </ul>
     </div> <!-- users in the room -->
   </div><!-- in a room -->
+  <button ng-click="quitRoom()">quit room</button>
+  <!-- <button ng-click="quitRoom()">quit room</button> -->
 </div>
