--- a/client/app/pages/chatRoom/chatRoom.temp.html
+++ b/client/app/pages/chatRoom/chatRoom.temp.html
@@ -8,7 +8,7 @@
       </li>
     </ul>
     <br>
-    <input type="button" value="create new room" ng-click="createNewRoom()">
+    <input type="button" value="create new room" ng-click="ciCtrl.createNewRoom()">
   </div> <!-- home page -->
   <div ng-if="ciCtrl.joinedRoom">
     <p>joined room: {{ ciCtrl.currentRoom }}</p>
@@ -19,5 +19,4 @@
     </div> <!-- users in the room -->
   </div><!-- in a room -->
   <button ng-click="quitRoom()">quit room</button>
-  <!-- <button ng-click="quitRoom()">quit room</button> -->
 </div>
