--- a/client/app/pages/chatAuth/chatAuth.temp.html
+++ b/client/app/pages/chatAuth/chatAuth.temp.html
@@ -1,6 +1,7 @@
 <div class="chatAuth">
   <!-- <h3>{{ title }}</h3> -->
   <h3>What's your nickname?</h3>
+  <img src="/static/image/chat.png" alt="">
   <input type="text" class="nickname-input" 
           ng-model="nickName"
          ng-keyup="setNickname($event)">
