--- a/client/app/pages/chatRoom/chatRoom.temp.html
+++ b/client/app/pages/chatRoom/chatRoom.temp.html
@@ -41,6 +41,6 @@
      </div> <!-- rooms -->
   </div> <!-- userList: sideBar -->
   <div class="chat">
-   
+   <smart-chatting></smart-chatting>
   </div> <!-- chat content -->
 </div>
