--- a/client/app/pages/chatRoom/chatRoom.temp.html
+++ b/client/app/pages/chatRoom/chatRoom.temp.html
@@ -42,5 +42,10 @@
   </div> <!-- userList: sideBar -->
   <div class="chat">
    <smart-chatting></smart-chatting>
+   <div class="chat-input">
+    <input class="input-box" type="text">
+    <div class="tools">
+    </div>
+   </div>   <!-- chat-input -->
   </div> <!-- chat content -->
 </div>
