--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- inject:css -->
-  <link rel="stylesheet" href="static/css/c1528318181371.min.css">
+  <link rel="stylesheet" href="static/css/c1528662815041.min.css">
   <!-- endinject -->
   <!--build:css  bower_components/components-font-awesome/css/fontawesome-all.min.css-->
   <!--/build-->
@@ -23,12 +23,13 @@
 <body>
   <div ui-view></div>
   <!-- inject:js -->
-  <script src="static/js/j1528318181371.min.js"></script>
+  <script src="static/js/j1528662815041.min.js"></script>
   <!-- endinject -->
   <style>
     * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
