--- a/client/app/pages/chat/chat.temp.html
+++ b/client/app/pages/chat/chat.temp.html
@@ -1,3 +1,7 @@
 <div class="chat">
+  <smart-notice class="notice" 
+                message="chatService.message" 
+                type="chatService.msgType">
+  </smart-notice>
   <div ui-view></div>
 </div>
