--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <head>
+  <title>Angular Practice</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- inject:css -->
-  <link rel="stylesheet" href="static/css/c1528920502476.min.css">
+  <link rel="stylesheet" href="static/css/c1529833276924.min.css">
   <!-- endinject -->
   <!--build:css  bower_components/components-font-awesome/css/fontawesome-all.min.css-->
   <!--/build-->
@@ -23,7 +24,7 @@
 <body>
   <div ui-view></div>
   <!-- inject:js -->
-  <script src="static/js/j1528920502476.min.js"></script>
+  <script src="static/js/j1529833276924.min.js"></script>
   <!-- endinject -->
   <style>
     * {
